# youtube-agent

./: README.md
api/: pyproject.toml
api/src/api/: db.py  main.py  schemas.py
api/src/api/routers/: chat.py  ingest.py
api/src/api/utils/: chunk.py  embeddings.py  transcript.py
ui/: package-lock.json
ui/src/: App.css  App.js  index.css
ui/src/components/: Chat.js  MessageBubble.js  YoutubeIngest.js
ui/src/services/: api.js
